--- a/interface/src/apps/profile/ProfileMainPanel/ProfileMainPanel.module.css
+++ b/interface/src/apps/profile/ProfileMainPanel/ProfileMainPanel.module.css
@@ -64,7 +64,13 @@
 .commitGridWrapper {
   max-width: 480px;
   width: 100%;
-  margin-left: max(0px, calc(50vw - 240px - var(--left-panel-width, 248px) - 1px - var(--space-5)));
+  margin-left: max(
+    0px,
+    calc(
+      50vw - 240px - var(--left-panel-width, 248px) - 1px - var(--space-5) -
+        var(--sidekick-width, 0px) / 2
+    )
+  );
   margin-right: auto;
   padding: var(--space-4);
   padding-bottom: var(--space-2);
@@ -76,7 +82,13 @@
   flex-direction: column;
   max-width: 480px;
   width: 100%;
-  margin-left: max(0px, calc(50vw - 240px - var(--left-panel-width, 248px) - 1px - var(--space-5)));
+  margin-left: max(
+    0px,
+    calc(
+      50vw - 240px - var(--left-panel-width, 248px) - 1px - var(--space-5) -
+        var(--sidekick-width, 0px) / 2
+    )
+  );
   margin-right: auto;
   gap: var(--space-1);
 }
@@ -85,7 +97,13 @@
   max-width: 480px;
   width: 100%;
   height: 100%;
-  margin-left: max(0px, calc(50vw - 240px - var(--left-panel-width, 248px) - 1px - var(--space-5)));
+  margin-left: max(
+    0px,
+    calc(
+      50vw - 240px - var(--left-panel-width, 248px) - 1px - var(--space-5) -
+        var(--sidekick-width, 0px) / 2
+    )
+  );
   margin-right: auto;
 }
 
